# llama_cpp_dart

./: .gitignore  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle
android/src/main/kotlin/com/example/llama_cpp_dart/: LlamaCppDartPlugin.kt
example/: pubspec.yaml
example/android/: gradle.properties
example/android/app/: build.gradle.kts
example/android/app/src/main/kotlin/com/example/llama_cpp_dart_example/: MainActivity.kt
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
lib/bind/: llama_binding.dart
lib/src/: llama.dart
src/: CMakeLists.txt
